<resources>
    <string name="app_name">Board Game Timer</string>

    <string name="action_settings">Settings</string>
    <string name="start_button_text">Start</string>
    <string name="end_button_text">Stop</string>
    <string name="pause_button_text">Pause</string>
    <string name="resume_button_text">Resume</string>
    <string name="duration">Duration:</string>
    <string name="minutes">minute(s)</string>
    <string name="comment_window_title">Insert comment</string>
    <string name="comment_window_text">Insert additional comment for this play</string>
    <string name="comment_window_confirm">Save</string>
    <string name="comment_window_cancel">Cancel</string>
    <string name="clear_button_text">Clear plays</string>
    <string name="plays_list_title">Saved plays</string>
</resources>
